<resources>
    <string name="app_name">PassButler</string>
    <string name="bundle_key_account_list_handler">account_list_handler</string>
    <string name="bundle_key_account_name">account_name</string>
    <string name="bundle_key_create_new_account_item">create_new_account_item</string>
    <string name="bundle_key_file_path">file_path</string>
    <string name="bundle_key_hardware_address">hardware_address</string>
    <string name="bundle_key_last_received_version_timestamp">last_received_version_timestamp</string>
    <string name="bundle_key_last_incorporated_version_timestamp">last_incorporated_version_timestamp</string>
    <string name="bundle_key_merge_date">merge_date</string>
    <string name="bundle_key_move_task_to_back">move_task_to_back</string>
    <string name="account_list_handler_loader_reload_action">edu.hm.cs.ig.passbutler.reload</string>
    <string name="bluetooth_sync_channel_name">"passbutler_bluetooth_sync_channel"</string>
    <string name="bluetooth_sync_channel_uuid">"efac1942-6c97-4a9a-b13d-44511c226603"</string>
    <string name="sync_directory_name">sync</string>
    <string name="external_directory_name">PassButler</string>
    <string name="backup_file_name">passbutler.bak</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="font_dancing_script_regular_path">fonts/dancing_script_regular.ttf</string>
    <string name="font_dancing_script_bold_path">fonts/dancing_script_bold.ttf</string>
    <string name="shared_prefs_uuid_key">edu.hm.cs.ig.passbutler.shared_prefs_uuid</string>
    <string name="shared_prefs_auto_lock_enabled_key">edu.hm.cs.ig.passbutler.shared_prefs_auto_lock_enabled</string>
    <string name="shared_prefs_auto_lock_enabled_summary_on">On</string>
    <string name="shared_prefs_auto_lock_enabled_summary_off">Off</string>
    <string name="shared_prefs_auto_lock_enabled_title">Auto lock</string>
    <string name="shared_prefs_auto_lock_time_key">edu.hm.cs.ig.passbutler.shared_prefs_auto_lock_time</string>
    <string name="shared_prefs_auto_lock_time_title">Auto lock threshold (minutes)</string>
    <string name="shared_prefs_auto_lock_time_summary_default">Invalid time</string>
    <string name="shared_prefs_auto_lock_time_default">5</string>
    <string name="pref_header_auto_lock">Auto Lock</string>
    <string name="shared_prefs_bluetooth_sync_enabled_key">edu.hm.cs.ig.passbutler.shared_prefs_bluetooth_sync_enabled</string>
    <string name="shared_prefs_auto_sync_enabled_key">edu.hm.cs.ig.passbutler.shared_prefs_auto_sync_enabled</string>
    <string name="accounts_file_path">accounts</string>
    <string name="json_key_account_list">account_list</string>
    <string name="json_key_account_name">account_name</string>
    <string name="json_key_account_last_modified">account_last_modified</string>
    <string name="json_key_account_attribute_list">attribute_list</string>
    <string name="json_key_account_attribute_value">attribute_value</string>
    <string name="json_key_account_attribute_last_modified">attribute_last_modified</string>
    <string name="json_key_account_attribute_salt">attribute_salt</string>
    <string name="logo_activity_label">@string/app_name</string>
    <string name="create_persistence_activity_label">@string/app_name</string>
    <string name="create_password_edit_hint">Insert password</string>
    <string name="create_repeat_password_edit_hint">Repeat password</string>
    <string name="create_button_label">Create</string>
    <string name="unlock_activity_label">@string/app_name</string>
    <string name="unlock_password_edit_hint">Insert password</string>
    <string name="unlock_button_label">Unlock</string>
    <string name="unlock_pref_attempts">edu.hm.cs.ig.passbutler.unlockactivity.attempts</string>
    <string name="unlock_pref_last_attempt_time">edu.hm.cs.ig.passbutler.unlockactivity.last_attempt_time</string>
    <string name="unlock_temp_disabled">Login is temporarily disabled!</string>
    <string name="account_list_activity_label">Accounts</string>
    <string name="lock_menu_item_label">Lock</string>
    <string name="password_generator_menu_item_label">@string/password_generator_activity_label</string>
    <string name="sync_menu_item_label">@string/sync_activity_label</string>
    <string name="settings_menu_item_label">@string/settings_activity_label</string>
    <string name="default_account_name">Nameless account</string>
    <string name="delete_account_menu_item_label">Delete</string>
    <string name="backup_create_menu_item_label">Create Backup</string>
    <string name="backup_import_item_label">Import Backup</string>
    <string name="empty_account_list_message">No accounts were created until now</string>
    <string name="account_detail_activity_label">Nameless account</string>
    <string name="save_changes_menu_item_label">Save</string>
    <string name="account_attribute_login_key">Login</string>
    <string name="account_attribute_password_key">Password</string>
    <string name="default_attribute_name">Nameless attribute</string>
    <string name="default_attribute_value">Default attribute value</string>
    <string name="copy_attribute_menu_item_label">Copy</string>
    <string name="edit_attribute_menu_item_label">Edit</string>
    <string name="delete_attribute_menu_item_label">Delete</string>
    <string name="last_modified_identifier_text_view_label">Last modified:</string>
    <string name="default_last_modified_date">Default date</string>
    <string name="empty_attribute_list_message">No attributes were created until now</string>
    <string name="account_detail_item_lock_img_description">Passwordstrength Icon</string>
    <string name="password_generator_activity_label">Password generator</string>
    <string name="password_generator_default_text">Press The Button!</string>
    <string name="password_generator_generate_button_label">Generate!</string>
    <string name="password_generator_lowercase_label">a-z</string>
    <string name="password_generator_uppercase_label">A-Z</string>
    <string name="password_generator_numbers_label">0&#8211;9</string>
    <string name="password_generator_special_label">!$%&amp;</string>
    <string name="password_generator_chars_lowercase">abcdefghijklmnopqrstuvwxyz</string>
    <string name="password_generator_chars_uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="password_generator_chars_numbers">0123456789</string>
    <string name="password_generator_chars_special">!&quot;#$%&amp;&apos;()*+,-./:;&lt;=&gt;?@[\]^_`{|}~</string>
    <string name="password_generator_expert_mode_switch">Expert Mode</string>
    <string name="password_generator_passphrase_switch">Passphrase</string>
    <string name="sync_activity_label">Sync</string>
    <string name="device_name_key">device_name</string>
    <string name="device_hardware_address_key">device_hardware_address</string>
    <string name="delete_bluetooth_sync_device">Delete</string>
    <string name="default_bluetooth_sync_device_name">Default name</string>
    <string name="default_bluetooth_sync_device_hardware_address">Default hardware address</string>
    <string name="pair_devices_button_label">Pair devices</string>
    <string name="bluetooth_sync_switch_label">Bluetooth synchronization</string>
    <string name="bluetooth_sync_switch_on_text">Activated</string>
    <string name="bluetooth_sync_switch_off_text">Deactivated</string>
    <string name="auto_sync_switch_label">Automatic synchronization</string>
    <string name="auto_sync_switch_on_text">Activated</string>
    <string name="auto_sync_switch_off_text">Deactivated</string>
    <string name="sync_now_button_label">Sync now</string>
    <string name="bluetooth_pairing_advice">NOTE: You must pair your devices via Bluetooth before you can add them to the list of sync devices.</string>
    <string name="empty_sync_device_list_message">No sync devices were added until now</string>
    <string name="settings_activity_label">Settings</string>
    <string name="internal_error">Internal error</string>
    <string name="accounts_file_exists_error_msg">@string/internal_error</string>
    <string name="password_match_error_msg">The inserted passwords must match</string>
    <string name="unlock_error_msg">@string/internal_error</string>
    <string name="password_empty_error_msg">You must enter a password</string>
    <string name="wrong_password_error_msg">The inserted password is wrong</string>
    <string name="json_error_msg">@string/internal_error</string>
    <string name="loader_error_msg">@string/internal_error</string>
    <string name="add_attribute_error_msg">@string/internal_error</string>
    <string name="edit_attribute_error_msg">@string/internal_error</string>
    <string name="dialog_empty_name_error_msg">You must enter a name for the new account</string>
    <string name="dialog_add_attribute_empty_input_error_msg">You must enter a name and a value for the new attribute</string>
    <string name="dialog_edit_attribute_empty_input_error_msg">You must enter a new value for the attribute</string>
    <string name="destroy_failed_error_msg">@string/internal_error</string>
    <string name="password_generator_no_switch_msg">Check at least one switch!</string>
    <string name="add_bluetooth_sync_device_error_msg">Device could not be added</string>
    <string name="no_bluetooth_support_sync_error_msg">Your device is required to support Bluetooth for syncing</string>
    <string name="no_bluetooth_support_pairing_error_msg">Your device is required to support Bluetooth for pairing</string>
    <string name="enable_bluetooth_error_msg">@string/internal_error</string>
    <string name="missing_bluetooth_bond_error_msg">Synchronization failed. Bluetooth Pairing with device is required.</string>
    <string name="auto_lock_time_error_msg">The auto lock time must be an integer between %d and %d</string>
    <string name="manipulation_error_msg">Account data was manipulated and cannot be decrypted. Please restore it from a backup.</string>
    <string name="missing_key_error_msg">Your password expired. Please unlock the app again.</string>
    <string name="cannot_create_persistence_error_msg">@string/internal_error</string>
    <string name="sync_wrong_password_error_msg">Could not sync data from remote device. Did you use another password?</string>
    <string name="dialog_title_account_name">Please enter a name for the new account</string>
    <string name="dialog_title_overwrite_account">An account with that name already exists. Do you want to overwrite it?</string>
    <string name="dialog_title_overwrite_account_attribute">An attribute with that name already exists. Do you want to overwrite it?</string>
    <string name="dialog_title_add_account_attribute">Please enter a name and a value for the new attribute</string>
    <string name="dialog_title_edit_account_attribute">Please enter a new value for the attribute</string>
    <string name="dialog_title_delete_account">Do you really want to delete this account?</string>
    <string name="dialog_title_delete_attribute">Do you really want to delete this attribute?</string>
    <string name="pref_header_login_attempt">Login Attempts</string>
    <string name="pref_number_of_attempts">Number Of Attempts</string>
    <string name="pref_number_of_attempts_default">3</string>
    <string name="pref_number_of_attempts_key">edu.hm.cs.ig.passbutler.number_of_attempts_key</string>
    <string name="pref_attempt_lock_time">Lock Time (Minutes)</string>
    <string name="pref_attempt_lock_time_default">3</string>
    <string name="pref_attempt_lock_time_key">edu.hm.cs.ig.passbutler.attempt_lock_time</string>
    <string name="pref_header_overdue">Password Change Reminder</string>
    <string name="pref_overdue_title">Reminder Time (Days)</string>
    <string name="pref_overdue_default">30</string>
    <string name="pref_overdue_key">edu.hm.cs.ig.passbutler.overdue</string>
</resources>