<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lock_menu_item"
        android:title="@string/lock_menu_item_label"
        android:icon="@drawable/ic_action_lock"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/password_generator_menu_item"
        android:title="@string/password_generator_menu_item_label"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sync_menu_item"
        android:title="@string/sync_menu_item_label"
        android:orderInCategory="300"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings_menu_item_label"
        android:orderInCategory="400"
        app:showAsAction="never"/>
    <item
        android:id="@+id/backup_menu_item"
        android:title="@string/backup_activity_label"
        android:orderInCategory="350"
        app:showAsAction="never"/>
</menu>