<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:useDefaultMargins="true"
    tools:context="edu.hm.cs.ig.passbutler.PasswordGeneratorActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tv_password_generator_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/password_generator_default_text"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:fontFamily="monospace"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_password_generator_password"
            android:onClick="copyButtonOnClick"
            android:src="@drawable/ic_action_copy"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <Switch
            android:id="@+id/sw_password_generator_lowercase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="true"
            android:text="@string/password_generator_lowercase_label" />


        <Switch
            android:id="@+id/sw_password_generator_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            android:text="@string/password_generator_numbers_label" />

        <Switch
            android:id="@+id/sw_password_generator_uppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/password_generator_uppercase_label" />


        <Switch
            android:id="@+id/sw_password_generator_special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/password_generator_special_label" />

    </GridLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>

    <SeekBar
        android:id="@+id/sb_password_generator_length"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="252dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>

    <Button
        android:id="@+id/bt_password_generator_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="generateButtonOnClick"
        android:text="@string/password_generator_generate_button_label" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"></Space>
</LinearLayout>