<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account_detail_item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="8dp"
    android:background="@color/background_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:background="@color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/background_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account_attribute_key_text_view"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@color/background_light"
                android:text="@string/default_attribute_name" />

            <TextView
                android:id="@+id/account_attribute_value_text_view"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/gray"
                android:background="@color/background_light"
                android:text="@string/default_attribute_value" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/background_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/account_attribute_last_modified_identifier_text_view"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:paddingEnd="4dp"
                    android:background="@color/background_light"
                    android:text="@string/last_modified_identifier_text_view_label" />

                <TextView
                    android:id="@+id/account_attribute_last_modified_date_text_view"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:paddingStart="4dp"
                    android:background="@color/background_light"
                    android:text="@string/default_last_modified_date" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/account_detail_item_lock_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/account_detail_item_image_button"
            android:layout_centerVertical="true"
            android:contentDescription="@string/account_detail_item_lock_img_description"
            android:src="@drawable/ic_info_pw_red"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/account_detail_item_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/background_light"
            android:src="@drawable/ic_action_more" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
